--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 script:
  - go get -d -v ./... && go build -v ./...
  - go test -v ./...
- - gofmt -d .
+ - diff <(gofmt .) <("") 
 
 after_failure: failure
 after_error: failure
