--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,17 @@ go:
  - release
  - tip
 
- script:
-  - go get -d -v ./...
-  - go build -x -v ./...
-  - go test -x -v ./...
-  - diff <(gofmt -d .) <("")
+script:
+ - go get -d -v ./...
+ - go build -v ./...
+ - go test -v ./...
+ - diff <(gofmt -d .) <("") 
 
- after_failure: failure
- after_error: failure
+after_failure: failure
 
- notifications:
-   email:
-     recipients:
-       - jonathan.lawlor@gmail.com
-     on_success: change
-     on_failure: always
+notifications:
+  email:
+    recipients:
+      - jonathan.lawlor@gmail.com
+    on_success: change
+    on_failure: always
