fix go test call
Travis said the build failed, probably because of the wildcard.  This approach is exactly what coveralls.io suggests to do.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 script:
  - go get -d -v ./...
  - go build -v ./...
- - go test -v ./... -v -covermode=count -coverprofile=coverage.out
+ - go test -v -covermode=count -coverprofile=coverage.out
  - diff <(gofmt -d .) <("")
  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
 
