remove sudo from test-cover.sh call
No need to use sudo, and it resets the path so it can't call the go tool.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,7 @@ script:
  - go build -v ./...
  - go test -v ./...
  - diff <(gofmt -d .) <("")
- - sudo ls -la
- - sudo pwd
- - sudo bash test-coverage.sh
+ - bash test-coverage.sh
 
 after_failure: failure
 
