--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ install:
  - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then export CGO_LDFLAGS="-L/usr/lib -lopenblas"; fi
  - go get github.com/gonum/floats
  - go get github.com/gonum/blas
+ - go get launchpad.net/gocheck
 
 script:
  - go get -d -v ./...
