--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ go:
 
 before_install:
  - sudo apt-get update -qq
- - go get code.google.com/p/go.tools/cmd/cover
+ - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
  - go get github.com/mattn/goveralls
 
 
