--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
  - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then popd; fi
 
 script:
- - go get -d -v ./...
+ - go get -d -t -v ./...
  - go build -x -v ./...
  - go test -x -v ./...
  - diff <(gofmt -d .) <("")
