get packages only used in testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
  - go get github.com/mattn/goveralls
 
 script:
- - go get -d -v ./...
+ - go get -d -t -v ./...
  - go build -v ./...
  - go test -v ./...
  - diff <(gofmt -d .) <("")
