get packages only used in testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
  - go get launchpad.net/gocheck
 
 script:
- - go get -d -v ./...
+ - go get -d -t -v ./...
  - go build -x -v ./...
  - go test -x -v ./...
  - diff <(gofmt -d .) <("")
