--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
  - go get github.com/mattn/goveralls
 
 script:
- - go get -d -v ./...
+ - go get -d -t -v ./...
  - go build -v ./...
  - go test -v -covermode=count -coverprofile=coverage.out
  - diff <(gofmt -d .) <("")
