--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ go:
 before_install:
  - sudo apt-get update -qq
  - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
- - go get github.com/mattn/goveralls
 
 
 install:
@@ -47,6 +46,7 @@ install:
  - popd
  
 script:
+ - go get -d -t -v ./...
  - go test -x -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
