--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,34 @@
-branches:
- only:
-  - master
+sudo: false
 
 language: go
 
 go:
- - 1.2
+ - release
+ - tip
+ - 1.3.3
+
+env:
+  global:
+  - secure: "DFMafUo/eJVHYw6k2pHzu/zVTE0d0Aeec+YeaFnw2QlP+mr7jIpj7hYwBMeYm7ZromVRvF6cAW4R1za6NeugzHEEIll5cnWwLyGXWMq25hd7xOd+vq9qzY00OEKecHQgXpDx6RZkMvQEkHcuiWxueCe0BH41gtA8iVQ9TXjNbgQ="
+
+before_install:
+ - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+ - go get github.com/mattn/goveralls
 
 script:
- - go get -d -v ./... && go build -v ./...
- - go test -v ./...
- - diff <(gofmt -d .) <("") 
+ - go get -d -t -v ./...
+ - go build -v ./...
+ - go test -v -covermode=count -coverprofile=coverage.out
+ - diff <(gofmt -d .) <("")
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN; fi
 
 after_failure: failure
-after_error: failure
 
 notifications:
   email:
     recipients:
+      - jonathan.lawlor@gmail.com
       - jragonmiris@gmail.com
     on_success: change
     on_failure: always
+
