--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ script:
  - go get -d -t -v ./...
  - go test -x -v ./...
  - diff <(gofmt -d .) <("")
- - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash -c "${TRAVIS_BUILD_DIR}/.test-coverage.sh"; fi
 
 after_failure: failure
 
