Code-generated single precision native BLAS
Create new support package:

 github.com/gonum/blas/native/internal/math32

Explicitly declare float types to help type rewriting.

Also delete discard variable assignment left over from debugging and fix
doc typo.

Fixes #105.

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ install:
  - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then popd; fi
  - if [[ "$GOCROSS" == "386" && "$TRAVIS_GO_VERSION" != "tip" ]]; then export GOARCH=386; fi
  - if [[ "$GOARCH" == "386" ]]; then gvm cross linux 386; fi
+ - go get github.com/gonum/floats
 
 
 script:
