Update travis to test matrix with different build tag options.
Especially with our use of assembly, we should check that the tests pass under a variety of conditions

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ install:
 script:
  - go get -d -t -v ./...
  - go build -x -v ./...
+ - go test -x -v ./...
  - go test -tags bounds -x -v ./...
+ - go test -tags noasm -x -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
  
