--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ install:
 script:
  - go get -d -t -v ./...
  - go build -x -v ./...
- - go test -x -v ./...
- - go test -tags bounds -x -v ./...
- - go test -tags noasm -x -v ./...
+ - go test -a -x -v ./...
+ - go test -a -tags bounds -x -v ./...
+ - go test -a -tags noasm -x -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
  
