--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
  - 1.3.3
  - 1.4.2
 
-# After go 1.3, go tools moved from code.google.com to golang.org
+# Required for coverage.
 before_install:
  - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
