--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,20 @@
-sudo: false
-
 language: go
 
+# Versions of go that are explicitly supported by gonum.
 go:
  - 1.3.3
  - 1.4.2
- - tip
 
-env:
-  global:
-  - secure: "jevVWeS9oKIq2m4EQPpsWZcP24ILbJqAAGXt+ZaNKehrpgiJQfR29oipR/uX2p8OS9jElfnpklz9ErNlgrkztaUXp6wl9q2q/sR48sdvF0WZJTRa+7UNQIDxiM6TCvEE6nkWkvXxg8Wy8ut4r1wb95teYGGdouY5nzxO2xjSwVc="
-
+# Required for coverage.
 before_install:
- - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+ - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
 
+# Get deps, build, test, and ensure the code is gofmt'ed.
+# If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
  - go get -d -t -v ./...
  - go build -v ./...
  - go test -v ./...
  - diff <(gofmt -d .) <("")
- - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
-
-after_failure: failure
-
-notifications:
-  email:
-    recipients:
-      - jonathan.lawlor@gmail.com
-    on_success: change
-    on_failure: always
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
