--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,20 @@
-sudo: false
-
 language: go
 
+# Versions of go that are explicitly supported by gonum.
 go:
  - 1.3.3
  - 1.4.2
- - tip
 
-env:
-  global:
-  - secure: "aq8rblr2+Ga10psfUJAKBCVtSIv/Uca7Ga1eTzRnRuGPsCHhC691jPmNAd8P7UhmhZ6ZHNN6yC+yYsS+lzCm62gisyIMA3+NmOM4Y2qf3wTSVEvnjAdVonge8aB3zWk5XimhdwiXWoBtW4+cVrNYWv+uNw7gNzGhND0pWFFU//c="
-
-
+# Required for coverage.
 before_install:
- - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+ - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
 
+# Get deps, build, test, and ensure the code is gofmt'ed.
+# If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
  - go get -d -t -v ./...
  - go build -v ./...
- - go test -v -covermode=count -coverprofile=coverage.out
+ - go test -v ./...
  - diff <(gofmt -d .) <("")
- - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN; fi
-
-after_failure: failure
-
-notifications:
-  email:
-    recipients:
-      - jonathan.lawlor@gmail.com
-    on_success: change
-    on_failure: always
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
