--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ before_install:
 # If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
  - go get -d -t -v ./...
- - go build -v ./...
- - go test -v ./...
+ - go build -a -v ./...
+ - go build -a -tags noasm -v ./...
+ - go test -a -v ./...
+ - go test -a -tags noasm -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
