--- a/.travis.yml
+++ b/.travis.yml
@@ -1,60 +1,36 @@
+sudo: required
+
 language: go
 
 env:
-  global:
-  - secure: "cdE3p1PuSBF6pwGCg49Ji/YG1ijfulYaXxSeVos+8TEiI1ePwsHZ+jpZM3OAPGiC5h9U2F1mAxD/gXBjEHBXBTMj04r8XfFM82qMClEArYbGvE2+1HPOE4ZRBZmLQZVjuGth1mRpDvCZLIyNHKczbaL0AtyT3e7ekdZ7MGwowDQ="
   matrix:
   - BLAS_LIB=OpenBLAS
-  #- BLAS_LIB=Accellerate
-  # at some point, when the issue with drotgm is resolved
-  #- BLAS_LIB=ATLAS
+  - BLAS_LIB=gonum
+  # Does not currently link correctly.  Note that there is an issue with drotgm in ATLAS.
+  # - BLAS_LIB=ATLAS 
+  # If we can get multiarch builds on travis.
+  # There are some issues with the Accellerate implementation.
+  #- BLAS_LIB=Accellerate 
 
-
+# Versions of go that are explicitly supported by gonum.
 go:
  - 1.3.3
  - 1.4.2
- - tip
 
+# Required for coverage.
 before_install:
- - sudo apt-get update -qq
- - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+ - go get golang.org/x/tools/cmd/cover
+ - go get github.com/mattn/goveralls
 
-
+# Install the appropriate BLAS library.
 install:
- - if [[ "$BLAS_LIB" == "ATLAS" ]]; then sudo apt-get install -qq libatlas-base-dev; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo apt-get install -qq gfortran; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then pushd ~; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo git clone --depth=1 git://github.com/xianyi/OpenBLAS; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then pushd OpenBLAS; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo make FC=gfortran &> /dev/null; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo make PREFIX=/usr install; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then popd; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then curl http://www.netlib.org/blas/blast-forum/cblas.tgz | tar -zx; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then pushd CBLAS; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo mv Makefile.LINUX Makefile.in; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo BLLIB=/usr/lib/libopenblas.a make alllib; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then sudo mv lib/cblas_LINUX.a /usr/lib/libcblas.a; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then popd; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then popd; fi
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then export CGO_LDFLAGS="-L/usr/lib -lopenblas"; fi
- - go get github.com/gonum/blas
- - go get github.com/gonum/matrix/mat64
- - pushd cgo
- - if [[ "$BLAS_LIB" == "OpenBLAS" ]]; then perl genLapack.pl -L/usr/lib -lopenblas; fi
- - popd
- 
+ - bash .travis/$TRAVIS_OS_NAME/$BLAS_LIB/install.sh
+
+# Get deps, build, test, and ensure the code is gofmt'ed.
+# If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
  - go get -d -t -v ./...
- - go test -x -v ./...
- - diff <(gofmt -d .) <("")
- - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
- 
-
-after_failure: failure
-
-notifications:
-  email:
-    recipients:
-      - jonathan.lawlor@gmail.com
-    on_success: change
-    on_failure: always
+ - go build -v ./...
+ - go test -v ./...
+ - diff <(gofmt -d *.go) <("")
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash .travis/test-coverage.sh; fi
