test with and without asm

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
 script:
  - if [[ "$BLAS_LIB" == "gonum" ]]; then pushd native; fi
  - go get -d -t -v ./...
- - go test -x -v ./...
+ - go test -a -v ./...
+ - go test -a -tags noasm -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash -c "${TRAVIS_BUILD_DIR}/.travis/test-coverage.sh"; fi
