--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,18 @@
 language: go
 
-env:
-  global:
-  - secure: "CN8poRl+k/ZlGWxIYuWj0XLaJuSfTe6xPAMtz/Vyos34fnsZ/GltCFvCw8+nuWY/ue0v5UGYq2tZm8e+GY6pwbvzX2lbn+EbpC6xdbbGZ+I434LPrUHIpWhohw1D8fDvvB2G/mZ95MW+cJdhCt7sT2UvADRR5CWxSceHKr573dg="
-
+# Versions of go that are explicitly supported by gonum.
 go:
- - 1.4.2
- - tip
  - 1.3.3
+ - 1.4.2
 
+# Required for coverage, and testing.
 before_install:
- - sudo apt-get update -qq
- - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+ - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
-
-
-install:
- - go get github.com/gonum/floats
- - go get github.com/gonum/blas
  - go get gopkg.in/check.v1
 
+# Get deps, build, test, and ensure the code is gofmt'ed.
+# If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
  - go get -d -t -v ./...
  - go build -x -v ./...
@@ -27,14 +20,4 @@ script:
  - go test -a -tags bounds -x -v ./...
  - go test -a -tags noasm -x -v ./...
  - diff <(gofmt -d .) <("")
- - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash test-coverage.sh; fi
- 
-
-after_failure: failure
-
-notifications:
-  email:
-    recipients:
-      - jonathan.lawlor@gmail.com
-    on_success: change
-    on_failure: always
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash .travis/test-coverage.sh; fi
