--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,9 @@ install:
 # Get deps, build, test, and ensure the code is gofmt'ed.
 # If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
+ - if [[ "$BLAS_LIB" == "gonum" ]]; then pushd native; fi
  - go get -d -t -v ./...
  - go build -v ./...
  - go test -v ./...
  - diff <(gofmt -d *.go) <("")
- - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash .travis/test-coverage.sh; fi
+ - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash -c "${TRAVIS_BUILD_DIR}/.travis/test-coverage.sh"; fi
