internal: use reflect on appengine

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
 script:
  - go get -d -t -v ./...
  - go build -v ./...
- - go test -v ./...
+ - go test -v -a ./...
+ - go test -v -a -tags appengine ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
