--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ env:
   # at some point, when the issue with drotgm is resolved
   #- BLAS_LIB=ATLAS
 
-# Required for coverage.
 before_install:
+ # Required for coverage.
  - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
 
@@ -27,7 +27,7 @@ install:
  - source .travis/$TRAVIS_OS_NAME/$BLAS_LIB/install.sh
  - go get github.com/gonum/floats
 
-# Get deps, build, test, and ensure the code is gofmt'ed.
+# Get deps, build, test, ensure the code is gofmt'ed and check that go generate was run.
 # Move into the native directory if we aren't using an external blas lib.
 # If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
@@ -37,3 +37,5 @@ script:
  - go test -a -tags noasm -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash -c "${TRAVIS_BUILD_DIR}/.travis/test-coverage.sh"; fi
+ # This is run last since it alters the tree.
+ - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
