--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,5 @@ script:
  - go test -a -tags noasm -x -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash .travis/test-coverage.sh; fi
+ # This is run last since it alters the tree.
+ - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
