mat64: simplify offset calculation

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
  - go test -a -x -v ./...
  - go test -a -tags bounds -x -v ./...
  - go test -a -tags noasm -x -v ./...
+ - go test -a -tags appengine -x -v ./...
  - diff <(gofmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash .travis/test-coverage.sh; fi
  # This is run last since it alters the tree.
