--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ language: go
 # Versions of go that are explicitly supported by gonum.
 go:
  - 1.4.2
- - 1.5.1
+ - 1.5.2
+ - 1.6beta1
 
 # Required for coverage.
 before_install:
