add go 1.6beta1 to build matrix, go 1.5.1->go 1.5.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ language: go
 go:
  - 1.3.3
  - 1.4.2
- - 1.5.1
+ - 1.5.2
+ - 1.6beta1
 
 # Required for coverage, testing and generate.
 before_install:
