--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
  - go get golang.org/x/tools/cmd/cover
  - go get golang.org/x/tools/cmd/goimports
  - go get github.com/mattn/goveralls
+ - go get github.com/klauspost/asmfmt/cmd/asmfmt
 
 # Get deps, build, test, and ensure the code is gofmt'ed.
 # If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
@@ -24,8 +25,7 @@ script:
  - go test -v -x -a -tags noasm ./...
  - go test -v -x -a -tags appengine ./...
  - diff <(gofmt -d .) <("")
- # TODO(vladimir-ch): Enable asmfmt after its output has stabilized.
- # diff <(asmfmt -d .) <("")
+ - diff <(asmfmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
  # This is run last since it alters the tree.
  - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
