--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,11 @@ matrix:
   - os: osx
     env: BLAS_LIB=OpenBLAS
 
+# Cache used to persist the compiled BLAS library between CI calls.
+cache:
+  directories:
+  - OpenBLAS.cache
+
 # Install the appropriate blas library (if any) and associated gonum software.
 install:
  - source ${TRAVIS_BUILD_DIR}/.travis/$TRAVIS_OS_NAME/$BLAS_LIB/install.sh
