move cache directory from OpenBLAS.cache to .travis/OpenBLAS.cache
Moving the cache directory into .travis means that the check-generate.sh
script no longer compares the cache directory to the git repo, because
everything in the .travis/ directory is ignored.  Also, it is probably a
better place for it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
 # Cache used to persist the compiled BLAS library between CI calls.
 cache:
   directories:
-  - OpenBLAS.cache
+  - .travis/OpenBLAS.cache
 
 # Install the appropriate blas library (if any) and associated gonum software.
 install:
