--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ cache:
 before_install:
  - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
+ - go get github.com/cznic/cc
+ - go get github.com/gonum/internal/binding
 
 # Install the appropriate BLAS library.
 install:
@@ -41,3 +43,5 @@ script:
  - go test -v ./...
  - diff <(gofmt -d *.go) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash -c "${TRAVIS_BUILD_DIR}/.travis/test-coverage.sh"; fi
+ # This is run last since it alters the tree.
+ - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
