--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ script:
  - go build -a -tags noasm -v ./...
  - go test -a -v ./...
  - go test -a -tags noasm -v ./...
- - diff <(gofmt -d .) <("")
+ - test -z "`gofmt -d .`"
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
