--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
  - go get -d -t -v ./...
  - go build -v ./...
  - go test -v ./...
- - test -z "`gofmt -d *.go`"
+ - test -z "$(gofmt -d *.go)"
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash -c "${TRAVIS_BUILD_DIR}/.travis/test-coverage.sh"; fi
  # This is run last since it alters the tree.
  - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
