--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ script:
  - go get -d -t -v ./...
  - go build -v ./...
  - go test -v ./...
- - test -z "`gofmt -d .`"
+ - test -z "$(gofmt -d .)"
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
