removed backticks and replaced pwd

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
  - go test -v -x -a ./...
  - go test -v -x -a -tags noasm ./...
  - go test -v -x -a -tags appengine ./...
- - test -z "`gofmt -d .`"
+ - test -z "$(gofmt -d .)"
  - diff <(asmfmt -d .) <("")
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
  # This is run last since it alters the tree.
