removed backticks and replaced pwd (#186)

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
  - go build -v ./...
  - go test -v -a ./...
  - go test -v -a -tags appengine ./...
- - test -z "`gofmt -d .`"
+ - test -z "$(gofmt -d .)"
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
