--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ language: go
 
 # Versions of go that are explicitly supported by gonum.
 go:
- - 1.6
- - 1.7
- - 1.8
+ - 1.6.x
+ - 1.7.x
+ - 1.8.x
 
 # Required for coverage.
 before_install:
@@ -18,9 +18,14 @@ go_import_path: gonum.org/v1/gonum
 # Get deps, build, test, and ensure the code is gofmt'ed.
 # If we are building as gonum, then we have access to the coveralls api key, so we can run coverage as well.
 script:
- - go get -d -t -v gonum.org/v1/gonum/...
- - go build -v gonum.org/v1/gonum/...
- - go test -v gonum.org/v1/gonum/...
+ - go get -d -t -v ./...
+ - go build -v ./...
+ - go test -v ./...
+ - go test -a -tags bounds -x -v ./...
+ - go test -a -tags noasm -x -v ./...
+ - go test -a -tags appengine -x -v ./...
  - test -z "$(gofmt -d .)"
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
+ # This is run last since it alters the tree.
+ - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
 
