--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,16 @@ sudo: false
 
 language: go
 
-# Versions of go that are explicitly supported by gonum.
+# Versions of go that are explicitly supported by gonum plus go tip.
 go:
  - 1.6.x
  - 1.7.x
  - 1.8.x
+ - master
+
+matrix:
+ allow_failures:
+   - go: master
 
 before_install:
  # Required for format check.
