graph/formats/dot: simplify parser generator Makefile
Gocc now generated output which conforms to gofmt
(goccmack/gocc#36 has been resolved).

Simplify the Makefile by removing the goimports invokation.

--- a/graph/formats/dot/internal/Makefile
+++ b/graph/formats/dot/internal/Makefile
@@ -1,18 +1,14 @@
 gen: dot.bnf
 	gocc $<
-	# TODO: Remove once https://github.com/goccmack/gocc/issues/36 gets resolved.
 	./paste_copyright.bash
-	find . -type f -name '*.go' | xargs goimports -w
 
 debug_lexer: dot.bnf
 	gocc -debug_lexer -v -a $<
-	# TODO: Remove once https://github.com/goccmack/gocc/issues/36 gets resolved.
-	find . -type f -name '*.go' | xargs goimports -w
+	./paste_copyright.bash
 
 debug_parser: dot.bnf
 	gocc -debug_parser -v -a $<
-	# TODO: Remove once https://github.com/goccmack/gocc/issues/36 gets resolved.
-	find . -type f -name '*.go' | xargs goimports -w
+	./paste_copyright.bash
 
 clean:
 	rm -f errors/errors.go
