travis: ensure gocc is pinned to specific sha

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
  - go get golang.org/x/tools/cmd/cover
  - go get github.com/mattn/goveralls
  # Required for dot parser checks.
- - go get github.com/goccmack/gocc
+ - ./.travis/install-gocc.sh 2454fdc
 
 go_import_path: gonum.org/v1/gonum
 
