--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ script:
  - go get -d -t -v ./...
  - go build -v ./...
  - go test -v ./...
- - go test -a -tags bounds -x -v ./...
- - go test -a -tags noasm -x -v ./...
- - go test -a -tags appengine -x -v ./...
+ - go test -a -tags bounds -v ./...
+ - go test -a -tags noasm -v ./...
+ - go test -a -tags appengine -v ./...
  - if [[ $TRAVIS_SECURE_ENV_VARS = "true" ]]; then bash ./.travis/test-coverage.sh; fi
  # This is run last since it alters the tree.
  - ${TRAVIS_BUILD_DIR}/.travis/check-generate.sh
